<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/layoutClerck">

    <Button
        android:id="@+id/btnFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:hint="@string/funcionario"
        android:layout_weight="0.03" />

    <Button
        android:id="@+id/btnEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:hint="@string/empresa"
        android:layout_weight="0.03" />

    <Button
        android:id="@+id/btnArCondicionado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:hint="@string/temperatura"
        android:layout_weight="0.03" />


</LinearLayout>