<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/funcionarioLayout"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="75dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:text="@string/textoFuncionario"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/temperature_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="2dp">

        <EditText
            android:id="@+id/temperature"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:inputType="none"
            android:hint="@string/temperature"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floor_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="2dp">

        <EditText
            android:id="@+id/floor"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:inputType="number"
            android:hint="@string/floor"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnConditioner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:hint="@string/arCondicionado"  />

</LinearLayout>